--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/fonts/icomoon.eot?-of7xsy');
-	src:url('/fonts/icomoon.eot?#iefix-of7xsy') format('embedded-opentype'),
-		url('/fonts/icomoon.woff?-of7xsy') format('woff'),
-		url('/fonts/icomoon.ttf?-of7xsy') format('truetype'),
-		url('/fonts/icomoon.svg?-of7xsy#icomoon') format('svg');
+	src:url('/fonts/icomoon.eot?ss4b47');
+	src:url('/fonts/icomoon.eot?#iefixss4b47') format('embedded-opentype'),
+		url('/fonts/icomoon.woff?ss4b47') format('woff'),
+		url('/fonts/icomoon.ttf?ss4b47') format('truetype'),
+		url('/fonts/icomoon.svg?ss4b47#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,6 +41,12 @@
 .icon-cart2:before {
 	content: "\e605";
 }
+.icon-users:before {
+	content: "\e60b";
+}
+.icon-mug:before {
+	content: "\e60c";
+}
 .icon-food:before {
 	content: "\e606";
 }
@@ -55,4 +61,10 @@
 }
 .icon-flag:before {
 	content: "\e60a";
+}
+.icon-brightness-medium:before {
+	content: "\e60d";
+}
+.icon-star:before {
+	content: "\e60e";
 }
