--- a/css/timeline.css
+++ b/css/timeline.css
@@ -126,6 +126,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+.nlg-top {
+	margin-bottom: 40px;
+}
+
 /* setup youtube style */
 .youtube { width: 100%; height: 500px; }
 
