--- a/css/timeline.css
+++ b/css/timeline.css
@@ -138,6 +138,19 @@ h1, h2, h3, h4, h5, h6 {
 	color: grey;
 }
 
+.posterless-event-gulden {
+	display: inline;
+}
+
+.posterless-event-icon {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	font-size: 8em;
+	color: #f08239;
+}
+
 .vis.timeline .item.box {
 	/* box */
 }
