--- a/css/timeline.css
+++ b/css/timeline.css
@@ -151,6 +151,13 @@ h1, h2, h3, h4, h5, h6 {
 	color: #f08239;
 }
 
+.footer {
+	padding-top: 20px;
+	position: absolute;
+	bottom: 0px;
+	padding-bottom: 10px;
+}
+
 .vis.timeline .item.box {
 	/* box */
 }
